# Concordia-Backend

./: .dockerignore  .env.development  .env.example  .env.production  .env.staging  .env.stripe.example  .eslintrc.cjs  .gitignore  API_ENDPOINTS.md  CHANGELOG.md  COMMIT_MESSAGE_sdk-test-baseline.txt  DEPLOYMENT.md  DEPLOY_CHECKLIST.md  Dockerfile  GO_LIVE_CHECKLIST.md  Procfile  README.md  REPORT_PROJECT_INSPECTION.md  architecture.md  backend-errors-utf8.txt  backend-errors.txt  backend-phase1-errors.txt  backend_core_files.txt  check_imports.ps1  controllers_files.txt  create-admin.js  create_branch_seed.mjs  docker-compose.yml  ecosystem-logrotate.config.js  ecosystem.config.js  errors.txt  eslint-report.json  fly.toml  healthcheck.js  insert_accepted_event.mjs  intent_debug.txt  intent_test.txt  jest-memory-test-output.txt  jest-report.json  jest-report2.json  (+46 more)
.continue/: config.json
admin-dashboard/: package-lock.json  package.json
admin-ui/: package-lock.json  package.json  tsconfig.json
concordia-courier-ui/: package-lock.json  package.json
data.js/: opening-hours.tson
deploy/: README.md
docs/: CHANGELOG.md  SDK_PUBLISHING.md  developer-onboarding.md  github-secrets.md  index.html  kempen-menu-review.md  launch-checklist.md  production-hardening.md
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
load-tests/: admin-dashboard.js  (+4 more)
sdks/python/: CHANGELOG.md  README.md  concordia_client.py  models.py  pyproject.toml
(+1236 files in other folders)
